--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -4,8 +4,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command:  PATH="/usr/local/bin:$PATH"
-
-    command: python main.py
+    command: PATH="/usr/local/bin:$PATH" python main.py
     volumes:
       - .:/app
